--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "bekal-photo-editor",
+  "name": "photo-voice",
   "private": true,
-  "version": "0.1.0",
+  "homepage": "https://johnwalked.github.io/photo-voice",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@google/genai": "^1.30.0",
+    "react-dom": "^19.2.0",
     "lucide-react": "^0.554.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.2.0",
+    "@google/genai": "^1.30.0",
+    "vite": "^7.2.4",
+    "@vitejs/plugin-react": "^5.1.1"
   },
   "devDependencies": {
-    "@types/node": "^20.11.0",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "typescript": "^5.3.0",
-    "vite": "^5.0.0"
+    "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "typescript": "~5.8.2",
+    "vite": "^6.2.0"
   }
 }
